# desafio-final-bootcamp

./: .env.test  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run.py
alembic/: env.py
alembic/versions/: 71be88e6f471_initial_migration.py
app/: api_main.py
app/api/: __init__.py  dependencies.py
app/api/v1/: __init__.py  customer.py
app/model/: __init__.py  address.py  base.py  customer.py  payment_method.py
app/repository/: base.py  customer_repository.py
app/schema/: __init__.py  address.py  base.py  common.py  customer.py  pagination.py  payment_method.py
app/service/: __init__.py  base.py  customer_service.py
app/utils/: __init__.py  config.py  database.py  exceptions.py  handlers.py  logger.py
tests/: conftest.py
tests/repository/: test_customer_repository.py
